# django_simple_proxy

./: README.md  pyproject.toml
django_simple_proxy/: actions.py  admin.py  models.py  queryset.py  tasks.py
django_simple_proxy/migrations/: 0001_initial.py
django_simple_proxy/tools/: __init__.py  check.py  tools.py  useragent.py
tests/: test_django_simple_proxy.py
