[tool.poetry]
name = "django_simple_proxy"
version = "0.1.0"
description = ""
authors = ["Alex Polev <apolevki09@gmail.com>"]
repository = 'https://github.com/volunteer-prb/django_simple_proxy'
readme = 'README.md'
keywords = ['django', 'proxy']

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
Django = "^4.1.1"
django-import-export = "^2.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
