[tool.poetry]
name = "django_simple_proxy"
version = "0.1.5"
description = ""
authors = ["Alex Polev <apolevki09@gmail.com>"]
repository = 'https://github.com/volunteer-prb/django_simple_proxy'
readme = 'README.md'
keywords = ['django', 'proxy']

[tool.poetry.dependencies]
python = "^3.7"
requests = "*"
Django = "*"
django-import-export = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
